Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBoolObjObject.quorum
class Main
    action Main
        Boolean v = Test()
    end

    action Test() returns Boolean
        Object var
        return var
    end
end